[gd_scene load_steps=6 format=2]

[ext_resource path="res://Example/Map1/Scripts/scr_player.gd" type="Script" id=1]
[ext_resource path="res://Example/Map1/Sounds/sfx_waterstep.wav" type="AudioStream" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 1.5

[sub_resource type="Animation" id=2]
resource_name = "anm_idle"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("player_body/player_head/player_cam:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.1, -0.5 ), Vector3( 0, -0.1, -0.5 ), Vector3( 0, 0.1, -0.5 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("player_body/player_foot/sfx_footstep")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "anm_walking"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("player_body/player_head/player_cam:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.15, -0.5 ), Vector3( 0, -0.15, -0.5 ), Vector3( 0, 0.15, -0.5 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("player_body/player_foot/sfx_footstep")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[node name="obj_player" type="Spatial"]

[node name="player_main" type="KinematicBody" parent="."]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 1, 0 )
script = ExtResource( 1 )

[node name="player_colision" type="CollisionShape" parent="player_main"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="player_body" type="Spatial" parent="player_main"]

[node name="player_head" type="Spatial" parent="player_main/player_body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0 )

[node name="player_cam" type="Camera" parent="player_main/player_body/player_head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, -0.5 )
current = true

[node name="player_foot" type="Spatial" parent="player_main/player_body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="sfx_footstep" type="AudioStreamPlayer" parent="player_main/player_body/player_foot"]
stream = ExtResource( 2 )

[node name="player_anm" type="AnimationPlayer" parent="player_main"]
anims/anm_idle = SubResource( 2 )
anims/anm_walking = SubResource( 3 )
